# Cancer_biomarker_discovery

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
multimodal_image/: README.md  sanity_check.py
multimodal_image/scripts/: make_tile_labels.py  tile_wsi.py
notebooks/data/: BRCA_data.ipynb  TCGA_Lung.ipynb
notebooks/imagenet/: image_dl.ipynb
scripts/: preprocess.R
scripts/data/: TCGA_Lung.R
